--- a/css-two-column-layout/styles.css
+++ b/css-two-column-layout/styles.css
@@ -19,13 +19,17 @@ heading {
   text-align: center;
 }
 #container {
-  width:80%;
+  width:1100px;
   margin: 0 auto;
+}
+.row {
+  display: flex;
 }
 
 .col {
   display: flex;
   justify-content: space-between;
+  width: 100%;
 }
 
 .block {
