--- a/css-canvas-medical/styles.css
+++ b/css-canvas-medical/styles.css
@@ -4,10 +4,26 @@
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Tiempos Headline", serif;
-  color:#838383;
+  color:#50514f;
 }
 p, li {
-  color: #838383;
+  color: #6e6e6e;
+}
+#page-home h2, #page-home h3, #page-home h4, #page-home h5, #page-home h6 {
+  color:#6e6e6e;
+}
+
+a {
+  text-decoration: none;
+  color:#0a4265;
+}
+a:hover {
+  color:#052031;
+}
+
+q {
+  font-style: italic;
+  font-family: "Tiempos Headline";
 }
 
 .row {
@@ -104,9 +120,11 @@ header img.logo {
   margin:30px 0px;
 }
 main {
-  background-color: #fafafa;
   border-bottom: solid 1px #cecece8c;
 }
+/* #learn-more {
+  border-top: solid 1px #cecece8c;
+} */
 footer {
   color: white;
 }
@@ -167,11 +185,17 @@ ul.no-bullets > li {
 section.hero-banner {
   width:1100px;
   height: 540px;
-  background-image: url(images/hero.jpg);
   background-size: cover;
   position: relative;
   margin-bottom: 50px;
+}
 
+#page-home section.hero-banner{
+  background-image: url(images/hero.jpg);
+}
+
+#page-product section.hero-banner{
+  background-image: url(images/product/product-header.jpg);
 }
 .overlay {
   position:absolute;
@@ -204,4 +228,10 @@ div.border {
 }
 .contact-block {
   line-height: 1.5;
+}
+.align-left {
+  text-align: left;
+}
+.grey-background {
+  background-color: #fafafa;
 }
