--- a/css-canvas-medical/styles.css
+++ b/css-canvas-medical/styles.css
@@ -33,8 +33,14 @@ q {
 .col-10 {
   flex-basis: 10%;
 }
+.col-15 {
+  flex-basis: 15%;
+}
 .col-20 {
   flex-basis: 20%;
+}
+.col-25 {
+  flex-basis: 25%;
 }
 .col-30 {
   flex-basis: 30%;
@@ -200,6 +206,9 @@ section.hero-banner {
 .page-implementation section.hero-banner {
   background-image: url(images/implementation/implementation-header.jpg);
 }
+.page-about-us section.hero-banner {
+  background-image: url(images/about-us/about-us-header.jpg);
+}
 .overlay {
   position:absolute;
   left:0;
@@ -258,4 +267,42 @@ div.border {
   font-family: Avenir, sans-serif;
   font-size: 1.2rem;
   margin-left: -25px;
+}
+
+.team .profile {
+  flex-basis: 3;
+}
+
+.team .profile img {
+  /* width: 100%; */
+  height: 150px;
+  border-radius: 150px;
+}
+.row.team {
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 20px 25px;
+}
+.profile {
+  text-align: center;
+  padding: 15px;
+}
+.profile h3 {
+      margin-bottom: 8px;
+}
+.profile p {
+  margin:0;
+  padding:0;
+}
+.team p {
+  font-size: .95rem;
+}
+.padding-top {
+  padding-top:50px;
+}
+.our-story {
+  padding: 50px 0;
+}
+.padding-bottom {
+  padding-bottom: 50px;
 }
