--- a/javascript-typing-tutor/styles.css
+++ b/javascript-typing-tutor/styles.css
@@ -33,3 +33,52 @@ main {
 .incorrect.active {
   border-bottom: red solid 2px;
 }
+
+button {
+  cursor: pointer;
+}
+
+.modal {
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  top:0;
+  left:0;
+  display: flex;
+  background-color: #050505b2;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal div.content {
+  background-color: white;
+  width: 375px;
+  height: 230px;
+  padding: 20px;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.modal div.content h2 {
+  padding-bottom: 15px;
+}
+.modal div.content p {
+  padding: 15px;
+}
+.modal button.reset {
+  background-color: #e0887f;
+  font-weight: bold;
+  width:260px;
+  height: 40px;
+  text-align: center;
+  color:white;
+  padding: 5px 10px;
+  font-size: medium;
+  border-radius: 5px;
+  border:none;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.hide {
+  display: none;
+}
